import view.UserInteract;

public class Main {
    public static void main(String[] args) {
        UserInteract menu = new UserInteract();
        menu.displayMenu();

    }
}