package model.player;

import model.board.CellState;

public class HumanPlayer extends Player {

    public HumanPlayer(CellState state) {
        super(state);
    }
    
}